# HiP-Badge-openhaystack

./: flash_esp32.sh  sdkconfig  tmp.key
main/: CMakeLists.txt  Kconfig.projbuild  blinken.c  blinken.h  control.c  control.h  eyes.c  gamma_18.h  gamma_23.h  gamma_28.h  gassens.c  gassens.h  hipbadge.c  klist.h  kref.h  kutils.h  openhaystack_main.c  openhaystack_main.h  rainbow.c  ws2812.c  ws2812.h
